--- a/app/src/main/res/layout/fragment_change_device.xml
+++ b/app/src/main/res/layout/fragment_change_device.xml
@@ -1,27 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/global_bg"
+    android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".activity.plasmacollection.SelectPlasmaMachineActivity"
     >
 
 
-    <GridView
-        android:layout_marginTop="@dimen/btn_margin"
-        android:id="@+id/gridview"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:numColumns="3"
-        android:verticalSpacing="@dimen/btn_margin"
-        android:horizontalSpacing="@dimen/btn_margin"
-        android:columnWidth="100dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        />
-    <include layout="@layout/copyright_view"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="0.191" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.618">
+            <Button
+                android:id="@+id/btn_collection"
+                style="@style/btn_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/shuasfz"
+                android:padding="30dp"/>
+
+            <LinearLayout
+                android:layout_marginTop="@dimen/btn_margin_large"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible">
+                <Button
+                    android:id="@+id/btn_idcard_forget"
+                    android:layout_marginRight="@dimen/btn_padding"
+                    style="@style/btn_style2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/idcard_forget_take" />
+                <Button
+                    android:id="@+id/btn_idcard_broken"
+                    style="@style/btn_style2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/idcard_broken" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="0.191" />
+    </LinearLayout>
+
+
 </LinearLayout>
